--- a/index.html
+++ b/index.html
@@ -150,9 +150,10 @@
       <p class="caption"></p>
 
       <p class="text">
-            Video commovente lo so.
+            Le cose importanti rimangono per sempre
       </p>
     </section>
   </main>
 </body>
 </html>
+
